--- a/ERP/Views/Shared/_Layout.cshtml
+++ b/ERP/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
         </div>
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - ERP Plaiaundi</p>
+            <p>&copy; @DateTime.Now.Year - ERP Plaiaundi &copy;</p>
         </footer>
     </div>
 
