--- a/ERP/Views/Home/Partials/menuLeft.cshtml
+++ b/ERP/Views/Home/Partials/menuLeft.cshtml
@@ -1,5 +1,56 @@
-﻿<ul class="list-group">
-    <li class="list-group-item">Uno</li>
-    <li class="list-group-item">Dos</li>
-    <li class="list-group-item">Tres</li>
-</ul>
+﻿@model List<ERP.Models.erp_funciones>        
+
+@*<div class="column col-sm-3 col-xs-1 sidebar-offcanvas" id="sidebar">
+    <ul class="nav" id="menu">
+        <li><a href="#"><i class="fa fa-list-alt"></i> <span class="collapse in hidden-xs">Link 1</span></a></li>
+        <li><a href="#"><i class="fa fa-list"></i> <span class="collapse in hidden-xs">Stories</span></a></li>
+        <li><a href="#"><i class="fa fa-paperclip"></i> <span class="collapse in hidden-xs">Saved</span></a></li>
+        <li><a href="#"><i class="fa fa-refresh"></i> <span class="collapse in hidden-xs">Refresh</span></a></li>
+        <li>
+            <a href="#" data-target="#item1" data-toggle="collapse"><i class="fa fa-list"></i> <span class="collapse in hidden-xs">Menu <span class="caret"></span></span></a>
+            <ul class="nav nav-stacked collapse left-submenu" id="item1">
+                <li><a href="google.com">View One</a></li>
+                <li><a href="gmail.com">View Two</a></li>
+            </ul>
+        </li>
+        <li>
+            <a href="#" data-target="#item2" data-toggle="collapse"><i class="fa fa-list"></i> <span class="collapse in hidden-xs">Menu <span class="caret"></span></span></a>
+            <ul class="nav nav-stacked collapse" id="item2">
+                <li><a href="#">View One</a></li>
+                <li><a href="#">View Two</a></li>
+                <li><a href="#">View Three</a></li>
+            </ul>
+        </li>
+        <li><a href="#"><i class="glyphicon glyphicon-list-alt"></i> <span class="collapse in hidden-xs">Link</span></a></li>
+    </ul>
+</div>*@
+
+<div class="column col-sm-3 col-xs-1 sidebar-offcanvas" id="sidebar">
+    <ul class="nav" id="menu">
+        @foreach (var funcionItem in Model)
+        {
+            if (funcionItem.erp_funciones1.Count > 0)
+            {
+                <li class="menu-funcion">
+                    <a href="#" data-target="#@funcionItem.id" data-toggle="collapse"><i class="@funcionItem.icono_small"></i> <span class="collapse in hidden-xs">@funcionItem.nombre <span class="caret"></span></span></a>
+                    <ul class="nav nav-stacked collapse left-submenu" id="@funcionItem.id">
+                        @foreach(var subFuncionItem in funcionItem.erp_funciones1)
+                        {
+                            <li class="menu-subfuncion"><a href="@subFuncionItem.url"><i class="@subFuncionItem.icono_small"></i> <span>@subFuncionItem.nombre</span></a></li>
+                        }
+                    </ul>
+                </li>
+            }
+            else if(funcionItem.funcion_x == null)
+            {
+                <li><a href="@funcionItem.url"><i class="@funcionItem.icono_small"></i><span class="collapse in hidden-xs">@funcionItem.nombre</span></a></li>
+            }
+        }
+    </ul>
+</div>
+<script>
+$('[data-toggle=offcanvas]').click(function() {
+    $('.row-offcanvas').toggleClass('active');
+    $('.collapse').toggleClass('in').toggleClass('hidden-xs').toggleClass('visible-xs');
+});
+</script>
