--- a/ERP/Content/Site.css
+++ b/ERP/Content/Site.css
@@ -22,3 +22,140 @@ select,
 textarea {
     max-width: 280px;
 }
+
+/* CAMBIOS IGOR */
+.nav > li.menu-subfuncion {
+    padding-left: 20px;
+}
+.nav > li.menu-subfuncion > a:hover {
+    /*background: rgba(128, 128, 128, 0.2);
+    border-radius: 0px 0px 15px 15px;*/
+}
+
+/* PRUEBA AA  AA A ********************** */
+
+html, body {
+   height: 100%;
+}
+
+.wrapper, .row {
+   height: 100%;
+   margin-left:0;
+   margin-right:0;
+}
+
+.wrapper:before, .wrapper:after,
+.column:before, .column:after {
+    content: "";
+    display: table;
+}
+
+.wrapper:after,
+.column:after {
+    clear: both;
+}
+
+#sidebar {
+    background-color: #eee;
+    padding-left: 0;
+    float: left;
+    min-height: 100%;
+    padding: 20px;
+    border-radius: 0px 0 30px 0px;
+    width: 15%;
+}
+
+#sidebar .collapse.in {
+    display: inline;
+}
+
+#sidebar > .nav>li>a {
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+#main {
+    padding: 15px;
+    left: 0;
+}
+.margen-arriba-5 {
+    margin-top: 5px;
+}
+.margen-arriba-10 {
+    margin-top: 10px;
+}
+.margen-arriba-15 {
+    margin-top: 15px;
+}
+/*
+ * off canvas sidebar
+ * --------------------------------------------------
+ */
+@media screen and (max-width: 768px) {
+    #sidebar {
+        border-radius: 0px 0px 15px;
+        padding: 0px;
+        min-width: 44px;
+    }
+    .nav > li.menu-subfuncion {
+        padding-left: 0px;
+        background: #ddd;
+        border-radius: 0 10px 10px 0px;
+    }
+    .nav > li.menu-subfuncion span {
+        display: none;
+    }
+    #main {
+        /*width: 1%;*/
+        left: 0;
+    }
+    
+    #sidebar .visible-xs {
+       display:inline !important;
+    }
+    
+    .row-offcanvas {
+       position: relative;
+       -webkit-transition: all 0.4s ease-in-out;
+       -moz-transition: all 0.4s ease-in-out;
+       transition: all 0.4s ease-in-out;
+    }
+    
+    .row-offcanvas-left.active {
+       left: 45%;
+    }
+    
+    .row-offcanvas-left.active .sidebar-offcanvas {
+       left: -45%;
+       position: absolute;
+       top: 0;
+       width: 45%;
+    }
+} 
+ 
+ 
+@media screen and (min-width: 768px) {
+  .row-offcanvas {
+    position: relative;
+    -webkit-transition: all 0.25s ease-out;
+    -moz-transition: all 0.25s ease-out;
+    transition: all 0.25s ease-out;
+  }
+
+  .row-offcanvas-left.active {
+    left: 3%;
+  }
+
+  .row-offcanvas-left.active .sidebar-offcanvas {
+    left: -3%;
+    position: absolute;
+    top: 0;
+    width: 3%;
+    text-align: center;
+    min-width:42px;
+  }
+  
+  #main {
+    left: 0;
+  }
+}
